ya jalan las task, falta que las muestre en el html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,1 @@
-<form [formGroup]="formlog" (ngSubmit)="login()">
-    <div>
-      <label>Email</label>
-      <input type="email" formControlName="email">
-      <div *ngIf="formlog.controls['email'].touched && formlog.controls['email'].errors">
-        <div *ngIf="formlog.controls['email'].errors['required']">El email es requerido.</div>
-        <div *ngIf="formlog.controls['email'].errors['email']">El email debe tener un formato válido.</div>
-      </div>
-    </div>
-    <div>
-      <label>Password</label>
-      <input type="password" formControlName="password">
-      <div *ngIf="formlog.controls['password'].touched && formlog.controls['password'].errors">
-        <div *ngIf="formlog.controls['password'].errors['required']">La contraseña es requerida.</div>
-      </div>
-    </div>
-    <button type="submit" [disabled]="!formlog.valid">Iniciar sesión</button>
-  </form>
-  
+<router-outlet></router-outlet>
