--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+h1 {
+  color: #fff;
+}
+
+
+.custom-form {
+
+    background-color: #ff97a2;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+
+}
+
+.custom-form input {
+  display: block;
+  margin: 2rem 0;
+  width: 100%;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  border: none;
+  border: 0 none;
+  background: #ebf5fc;
+}
+
+.custom-form button {
+ 
+
+  cursor: pointer;
+  width: 200px;
+    padding: 10px;
+    background-color: #ff5c73;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
