--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,83 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;	
+  font-family: Raleway, sans-serif;
+}
+
+.background {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(to right, #FF5722, #FFC107);
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.card-wrapper {
+  width: 80%;
+  max-width: 800px;
+}
+
+.card {
+  margin: 20px;
+  background-color: #f5f5f5; /* Cambia el color de fondo aquí */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.mat-card-title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.mat-card-content {
+  margin-top: 10px;
+}
+
+.mat-card-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.mat-toolbar {
+  background-color: #fff;
+  color: #292929;
+  padding: 10px;
+}
+
 .example-spacer {
   flex: 1 1 auto;
+}
+
+.example-icon {
+  color: #292929;
+}
+
+.example-icon.favorite-icon {
+  color: #FF5722;
+}
+
+
+.mat-toolbar-row {
+  display: flex;
+  align-items: center;
+}
+
+.mat-toolbar-row .example-spacer {
+  flex: 1;
+}
+
+.mat-toolbar-row .example-icon {
+  margin-left: 10px;
 }
