--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,33 @@
-<mat-toolbar>
-  <span>BIENVENID@</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>task</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" (click)="logout()" aria-label="Example icon-button with share icon">
-    <mat-icon>login</mat-icon>
-  </button>
+<mat-toolbar color="primary">
+  <div class="mat-toolbar-row">
+    <span>BIENVENID@</span>
+    <span class="example-spacer"></span>
+    <div>
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <mat-icon>task</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon" (click)="logout()" aria-label="Example icon-button with share icon">
+        <mat-icon>login</mat-icon>
+      </button>
+    </div>
+  </div>
 </mat-toolbar>
+
+<div class="background">
+  <div class="card-container">
+    <div class="card-wrapper">
+      <mat-card *ngFor="let task of tasks" class="card">
+        <mat-card-header>
+          <mat-card-title>{{ task.title }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>{{ task.description }}</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary">Action 1</button>
+          <button mat-button color="accent">Action 2</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+</div>
